--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -92,7 +92,7 @@
 		* Add SadSoul Map with Evolutions map. (Tryller)
 		* Add GOD account to forgottenserver.s3db 2/2. (Tryller)
 		* Add new shop module to npc system StdModule.allBlessings. (Tryller)
-		* Add new configs from TFS 0.4 monsterSpawnWalkback, defaultDepotSizePremium, defaultDepotSize.
+		* Add new configs from TFS 0.4 useCapacity, monsterSpawnWalkback, defaultDepotSizePremium, defaultDepotSize.
 			vipListDefaultLimit and vipListDefaultPremiumLimit. (Tryller)
 		* Add new lua functions from TFS 0.4 doSteerCreature(cid, position[, maxNodes]). (Tryller)
 		* Add old quest system based on unique id (quests.lua). (Tryller)
