* New efature houseSkipInitialRent
* Fix house issues

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -94,7 +94,7 @@
 		* Add new shop module to npc system StdModule.allBlessings. (Tryller)
 		* Add new configs from TFS 0.4 useCapacity, monsterSpawnWalkback, defaultDepotSizePremium, defaultDepotSize.
 			vipListDefaultLimit and vipListDefaultPremiumLimit, mailMaxAttempts, mailBlockPeriod and mailAttemptsFadeTime,
-			houseProtection. (Tryller)
+			houseProtection, houseSkipInitialRent. (Tryller)
 		* Add new lua functions from TFS 0.4 doSteerCreature(cid, position[, maxNodes]). (Tryller)
 		* Add old quest system based on unique id (quests.lua). (Tryller)
 		* Clean actions, movements and weapons scripts to work only with 7.9 items (Tryller)
