--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -94,7 +94,7 @@
 		* Add new shop module to npc system StdModule.allBlessings. (Tryller)
 		* Add new configs from TFS 0.4 useCapacity, monsterSpawnWalkback, defaultDepotSizePremium, defaultDepotSize.
 			vipListDefaultLimit and vipListDefaultPremiumLimit, mailMaxAttempts, mailBlockPeriod and mailAttemptsFadeTime,
-			houseProtection, houseSkipInitialRent. (Tryller)
+			houseProtection, houseSkipInitialRent, houseTileLimit, tileLimit, protectionTileLimit. (Tryller)
 		* Add new lua functions from TFS 0.4 doSteerCreature(cid, position[, maxNodes]). (Tryller)
 		* Add old quest system based on unique id (quests.lua). (Tryller)
 		* Clean actions, movements and weapons scripts to work only with 7.9 items (Tryller)
@@ -122,6 +122,7 @@
 		* Remove not supported 7.9 monsters. (Tryller)
 		* Remove not supported 7.9 spells. (Tryller)
 		* Remove bag from monsters. (Tryller)
+		* Removed from config.lua maxItemsPerPZTile and maxItemsPerHouseTile, replaced with new one. (Tryller)
 		* Remove lua function getItemInfo and move functions to new lua functions, getItemPluralNameById(itemid), getItemArticleById(itemid), 
 			getItemRWInfo(uid), getItemWeaponType(uid), isCorpse(uid), getFluidSourceType(type), getItemDescriptionsById(itemid),
 			getItemDescriptions(uid) and getItemWeightById(itemid, count[, precise = TRUE]). (Tryller)
