* Revert this for now

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -56,6 +56,7 @@
 			data/weapons/
 					scripts/
 						burst_arrow.lua
+						poison_arrow.lua
 					weapons.xml
 			data/XML/
 					outfits.xml
@@ -102,7 +103,7 @@
 		* Add old quest system based on unique id (quests.lua). (Tryller)
 		* Clean actions, movements and weapons scripts to work only with 7.9 items. (Tryller)
 		* Auto stack items. (Elf)
-		* Burst arrows using old formula based on magic level. (Tryller)
+		* Burst and Poison arrows using old formula. (Tryller)
 		* Only mysql and sqlite support. (Tryller)
 		* Only console support. (Tryller)
 		* Fix isItemStackable and isItemFluidContainer based on hard coded instead of lua. (Tryller)
@@ -116,7 +117,7 @@
 		* Updated Account Manager to work with account number instead of account name. (Tryller)
 		* Updated characters death corpse ITEM_MALE_CORPSE = 3058, ITEM_FEMALE_CORPSE = 3065 to work with 7.9 protocol. (Tryller)
 		* Updated npc system. (Tryller)
-		* Remove  from config.lua. (Tryller)
+		* Remove shared experience. (Tryller)
 		* Remove account name lua functions getAccountByName(name) and getAccountByAccountId(accId). (Tryller)
 		* Remove swimming pool from 7.9 protocol. (Tryller)
 		* Remove non 7.9 icons 	ICON_CURSED, ICON_BUFF, ICON_PZ and ICON_PROTECTIONZONE. (Tryller)
