--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -46,6 +46,7 @@
 						advancesave.lua
 			data/lib/
 					000-constant.lua
+					032-position.lua
 					050-function.lua
 					100-compat.lua
 			data/items
@@ -105,7 +106,8 @@
 			vipListDefaultLimit and vipListDefaultPremiumLimit, mailMaxAttempts, mailBlockPeriod and mailAttemptsFadeTime,
 			houseProtection, houseSkipInitialRent, houseTileLimit, tileLimit, protectionTileLimit, useRookSystem, rookTownId,
 			rookLevelToGetRooked, rookLevelToLeaveRook. (Tryller)
-		* Add new lua functions from TFS 0.4 doSteerCreature(cid, position[, maxNodes]). (Tryller)
+		* Add new lua functions from TFS 0.4 doSteerCreature(cid, position[, maxNodes]), getCreaturePartyShield(cid[, target]),
+			doCreatureSetPartyShield(cid, shield), isValidPosition(position), isNumeric(str). (Tryller)
 		* Add old quest system based on unique id (quests.lua). (Tryller)
 		* Clean actions, movements and weapons scripts to work only with 7.9 items. (Tryller)
 		* Auto stack items. (Elf)
