* Players can buy house with gold in inventory and/or bank balance

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -109,10 +109,10 @@
 		* Add new creature events onMoveItem(moveItem, frompos, position, cid). (Elf Tryller)
 		* Add old quest system based on unique id (quests.lua). (Tryller)
 		* Clean actions, movements and weapons scripts to work only with 7.9 items. (Tryller)
+		* Players can buy house with gold in inventory and/or bank balance. (Tryller)
 		* Auto stack items. (Elf)
 		* Burst and Poison arrows using old formula. (Tryller)
 		* Only mysql and sqlite support. (Tryller)
-		* Only console support. (Tryller)
 		* Fix isItemStackable and isItemFluidContainer based on hard coded instead of lua. (Tryller)
 		* Fix stamina system with 56 hours instead of 42. (Tryller)
 		* Fix PlayerCustomFlag_HasFullLight not working properly. (Tryller)
