* New features from 0.4

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -3,7 +3,7 @@
 		The Forgotten Server
 
 	Version
-		0.4
+		0.3.6 pl1
 
 	Protocol
 		7.9x by Tryller
@@ -20,7 +20,7 @@
 	M = Modified,
 	A = Added.
 
-	[ 0.4 for 7.9
+	[ 0.3.6 pl1 for 7.9
 		[ A...
 			data/actions/map/
 			data/actions/sscripts/quests/quests.lua
@@ -92,7 +92,7 @@
 ]
 
 [ Full changelog...
-	[ 0.4 with 7.9 protocol
+	[ 0.3.6 pl1 with 7.9 protocol
 		* Add ITEM_GROUP_RUNE from 7.9 protocol. (Tryller)
 		* Add new lua functions isItemRune(itemid). (Tryller)
 		* Add SadSoul Map with Evolutions map. (Tryller)
@@ -102,7 +102,7 @@
 		* Add new configs from TFS 0.4 useCapacity, monsterSpawnWalkback, defaultDepotSizePremium, defaultDepotSize.
 			vipListDefaultLimit and vipListDefaultPremiumLimit, mailMaxAttempts, mailBlockPeriod and mailAttemptsFadeTime,
 			houseProtection, houseSkipInitialRent, houseTileLimit, tileLimit, protectionTileLimit, useRookSystem, rookTownId,
-			rookLevelToGetRooked, rookLevelToLeaveRook, timeBetweenCustomActions. (Tryller)
+			rookLevelToGetRooked, rookLevelToLeaveRook, timeBetweenCustomActions, unifiedSpells, tradeLimit. (Tryller)
 		* Add new lua functions doSteerCreature(cid, position[, maxNodes]), getCreaturePartyShield(cid[, target]),
 			doCreatureSetPartyShield(cid, shield), isValidPosition(position), isNumeric(str), getTotalGold(cid), 
 			doPlayerPay(cid, cost), unregisterCreatureEvent(cid, name). (Tryller)
