* Storage as strings from 0.4

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -114,14 +114,40 @@
 		* Add GOD account to forgottenserver.s3db 2/2. (Tryller)
 		* Add Rook system (Elf)
 		* Add new shop module to npc system StdModule.allBlessings. (Tryller)
-		* Add new configs from TFS 0.4 useCapacity, monsterSpawnWalkback, defaultDepotSizePremium, defaultDepotSize.
-			vipListDefaultLimit and vipListDefaultPremiumLimit, mailMaxAttempts, mailBlockPeriod and mailAttemptsFadeTime,
-			houseProtection, houseSkipInitialRent, houseTileLimit, tileLimit, protectionTileLimit, useRookSystem, rookTownId,
-			rookLevelToGetRooked, rookLevelToLeaveRook, timeBetweenCustomActions, unifiedSpells, tradeLimit,
-			recoverManaAfterDeathInPvPZone, globalSaveMinute. (Tryller)
-		* Add new lua functions doSteerCreature(cid, position[, maxNodes]), getCreaturePartyShield(cid[, target]),
-			doCreatureSetPartyShield(cid, shield), isValidPosition(position), isNumeric(str), getTotalGold(cid), 
-			doPlayerPay(cid, cost), unregisterCreatureEvent(cid, name). (Tryller)
+		* Add MD5, SHA1 and RSA implementations improved using OpenSSL (Dalkon)
+		* Add new configurable variables in config.lua (Dalkon, Elf, slawkens, Talaturen, Don Daniello):
+			useCapacity
+			monsterSpawnWalkback
+			defaultDepotSizePremium
+			defaultDepotSize
+			vipListDefaultLimit
+			vipListDefaultPremiumLimit
+			mailMaxAttempts
+			mailBlockPeriod
+			mailAttemptsFadeTime
+			houseProtection
+			houseSkipInitialRent
+			houseTileLimit
+			tileLimit
+			protectionTileLimit
+			useRookSystem
+			rookTownId,
+			rookLevelToGetRooked
+			rookLevelToLeaveRook
+			timeBetweenCustomActions
+			unifiedSpells
+			tradeLimit,
+			recoverManaAfterDeathInPvPZone
+			globalSaveMinute
+		* Add new Lua functions (Elf, slawkens, Dalkon, Talaturen, Tryller):
+			doSteerCreature(cid, position[, maxNodes])
+			getCreaturePartyShield(cid[, target])
+			doCreatureSetPartyShield(cid, shield)
+			isValidPosition(position)
+			isNumeric(str)
+			getTotalGold(cid)
+			doPlayerPay(cid, cost)
+			unregisterCreatureEvent(cid, name)
 		* Add new creature events onMoveItem(moveItem, frompos, position, cid). (Elf Tryller)
 		* Add old quest system based on unique id (quests.lua). (Tryller)
 		* Add all database lua functions form 0.4 db.stringComparer(), db.connected(), db.tableExists(name), 
